custom-resource-consumers/takeout/apps/personal/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: personal
spec:
  selector:
    matchLabels:
      app: nextcloud
  replicas: 1 # active nas
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:21.0.9
        imagePullPolicy: Always
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - mountPath: "/var/www/html"
            name: nextcloud-data
        resources:
          requests:
            cpu: 100m
          limits:
            memory: 3Gi
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data-nas
      imagePullSecrets:
        - name: docker-hub
      # nodeSelector:
      #   kubernetes.io/hostname: weatherman
